--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,79 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
+
 html, body {
-    width: 100%;
-    height: 100%;
+width: 100%;
+height: 100%;
 }
-.port {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: cursive;
-    background-color: #17202A;
-    color: #bbc5cf;
-    position: relative;
-    padding: 0 20px;
-    flex-direction: column;
+
+.port, .skills {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+font-family: cursive;
+background-color: #17202A;
+color: #bbc5cf;
+position: relative;
+padding: 0 20px; 
+flex-direction: column;
 }
-.content {
-    text-align: left; 
-    max-width: 600px;
+
+.content, .skills-content {
+text-align: center; 
+max-width: 600px;
 }
 .move-right {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    margin-left: 50px;
-    object-fit: cover;
-    border: 5px solid #bbc5cf;
+width: 300px;
+height: 300px;
+border-radius: 50%;
+margin-left: 50px;
+object-fit: cover; 
+border: 5px solid #bbc5cf; 
 }
+
 .images {
-    display: flex;
-    gap: 20px;
-    margin-top: 20px;
+display: flex;
+gap: 20px;
+margin-top: 20px; 
 }
+
 .hobby-image {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid #bbc5cf; 
+width: 150px;
+height: 150px;
+border-radius: 50%;
+object-fit: cover;
+border: 5px solid #bbc5cf; 
 }
-.port + .port {
-    margin-top: 50px;
+
+.port + .port, .skills + .contact {
+margin-top: 50px;
+}
+
+.contact {
+text-align: center;
+margin: 20px;
+padding: 10px;
+background-color: #f0f0f0; 
+}
+
+.contact h1 {
+color: #333;
+}
+
+.contact p {
+font-size: 1.2em;
+}
+
+.skills ul {
+list-style-type: disc;
+margin-left: 20px; 
+text-align: left; 
+}
+
+.skills li {
+margin-bottom: 5px; 
 }
